update /references/backend/user content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -89,14 +89,14 @@ const sessions = await clerkClient.users.getUserList({
       cells: [
         <code>userId</code>,
         <code>string[]</code>,
-        <>The user ids to filter by.</>
+        <>The user ID's to filter by.</>
       ],
     },
     {
       cells: [
         <code>externalId</code>,
         <code>string[]</code>,
-        <>The external ids to filter by.</>
+        <>The external ID's to filter by.</>
       ]
     }
   ]}
