--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -24,4 +24,8 @@ This can also be flitered down by adding parameters of the type UserCountParams.
 | userId | string | The user ID's to filter by. |
 | externalId | string[] | The external ID's to filter by. |
 
+## Example
+
+```tsx
 const totalUsersMatchingTest = await clerkClient.users.getCount({ query: 'test' })
+```
