update /references/backend/user content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -22,85 +22,18 @@ const sessions = await clerkClient.users.getUserList({
 
 ## `UserListParams`
 
-<Tables 
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[ 
-    {
-      cells: [
-        <code>limit</code>,
-        <code>number</code>,
-        <>The number of results to return.</>
-      ],
-    },
-    {
-      cells: [
-        <code>offset</code>,
-        <code>number</code>,
-        <>The number of results to skip.</>
-      ],
-    },
-    {
-      cells: [
-        <code>orderBy</code>,
-        <code>created_at | updated_at</code>,
-        <>The field to order by. 
-          <br/>Prefix with a `-` to reverse the order. 
-          <br/>Prefix with a `+` to list in ascending order.
-        </>
-      ],
-    },
-    {
-      cells: [
-        <code>emailAddress</code>,
-        <code>string[]</code>,
-        <>The email addresses to filter by.</>
-      ],
-    },
-    {
-      cells: [
-        <code>phoneNumber</code>,
-        <code>string[]</code>,
-        <>The phone numbers to filter by.</>
-      ],
-    },
-    {
-      cells: [
-        <code>username</code>,
-        <code>string[]</code>,
-        <>The usernames to filter by.</>
-      ],
-    },
-    {
-      cells: [
-        <code>web3Wallet</code>,
-        <code>string[]</code>,
-        <>The web3Wallets to filter by.</>
-      ],
-    },
-    {
-      cells: [
-        <code>query</code>,
-        <code>string</code>,
-        <>The string to query by.</>
-      ],
-    },
-    {
-      cells: [
-        <code>userId</code>,
-        <code>string[]</code>,
-        <>The user ID's to filter by.</>
-      ],
-    },
-    {
-      cells: [
-        <code>externalId</code>,
-        <code>string[]</code>,
-        <>The external ID's to filter by.</>
-      ]
-    }
-  ]}
-/>
+| Name | Type | Description
+| --- | --- | --- |
+| limit | number | The number of results to return. |
+| offset | number | The number of results to skip. |
+| orderBy | <code>created_at | updated_at<code> | The field to order by. Prefix with a `-` to reverse the order. Prefix with a `+` to list in ascending order. |
+| emailAddress | string[] | The email addresses to filter by. |
+| phoneNumber | string[] | The phone numbers to filter by. |
+| username | string[] | The usernames to filter by. |
+| web3Wallet | string[] | The web3Wallets to filter by. |
+| query | string | The string to query by. |
+| userId | string[] | The user ID's to filter by. |
+| externalId | string[] | The external ID's to filter by. |
 
 ## Examples
 
