update /references/backend/user content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -24,16 +24,16 @@ const sessions = await clerkClient.users.getUserList({
 
 | Name | Type | Description
 | --- | --- | --- |
-| limit | number | The number of results to return. |
-| offset | number | The number of results to skip. |
-| orderBy | <code>created_at | updated_at</code> | The field to order by. Prefix with a `-` to reverse the order. Prefix with a `+` to list in ascending order. |
-| emailAddress | string[] | The email addresses to filter by. |
-| phoneNumber | string[] | The phone numbers to filter by. |
-| username | string[] | The usernames to filter by. |
-| web3Wallet | string[] | The web3Wallets to filter by. |
-| query | string | The string to query by. |
-| userId | string[] | The user ID's to filter by. |
-| externalId | string[] | The external ID's to filter by. |
+| `limit` | `number` | The number of results to return. |
+| `offset` | `number` | The number of results to skip. |
+| `orderBy` | <code>created_at | updated_at</code> | The field to order by. Prefix with a `-` to reverse the order. Prefix with a `+` to list in ascending order. |
+| `emailAddress` | `string[]` | The email addresses to filter by. |
+| `phoneNumber` | `string[]` | The phone numbers to filter by. |
+| `username` | `string[]` | The usernames to filter by. |
+| `web3Wallet` | `string[]` | The web3Wallets to filter by. |
+| `query` | `string` | The string to query by. |
+| `userId` | `string[]` | The user ID's to filter by. |
+| `externalId` | `string[]` | The external ID's to filter by. |
 
 ## Examples
 
