--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -22,7 +22,7 @@ const sessions = await clerkClient.users.getUserList({
 
 ## `UserListParams`
 
-| Name | Type | Description
+| Name | Type | Description |
 | --- | --- | --- |
 | `limit` | `number` | The number of results to return. |
 | `offset` | `number` | The number of results to skip. |
