update get-user-list content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -26,7 +26,7 @@ const sessions = await clerkClient.users.getUserList({
 | --- | --- | --- |
 | `limit` | `number` | The number of results to return. |
 | `offset` | `number` | The number of results to skip. |
-| `orderBy` | <code>created_at | updated_at</code> | The field to order by. Prefix with a `-` to reverse the order. Prefix with a `+` to list in ascending order. |
+| `orderBy` | `created_at \| updated_at` | The field to order by. Prefix with a `-` to reverse the order. Prefix with a `+` to list in ascending order. |
 | `emailAddress` | `string[]` | The email addresses to filter by. |
 | `phoneNumber` | `string[]` | The phone numbers to filter by. |
 | `username` | `string[]` | The usernames to filter by. |
