update /references/backend/user content

--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -3,7 +3,7 @@ title: createUser()
 description: Creates a user. Your user management settings determine how you should setup your user model.
 ---
 
-# createUser(params?: CreateUserParams)
+# `createUser(params?: CreateUserParams)`
 
 Creates a user. Your user management settings determine how you should setup your user model.
 
