--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -11,15 +11,6 @@ Retrieves user list:
 const users = await clerkClient.users.getUserList();
 ```
 
-Retrieves user list that is ordered and filtered by the number of results. More params can be found at the UserListParams definition.
-
-```tsx
-const sessions = await clerkClient.users.getUserList({
-  orderBy: '-created_at',
-  limit: 10,
-});
-```
-
 ## `UserListParams`
 
 | Name | Type | Description |
@@ -36,6 +27,17 @@ const sessions = await clerkClient.users.getUserList({
 | `externalId` | `string[]` | The external ID's to filter by. |
 
 ## Examples
+
+### `getUserList({ orderBy, limit })`
+
+Retrieves user list that is ordered and filtered by the number of results:
+
+```tsx
+const sessions = await clerkClient.users.getUserList({
+  orderBy: '-created_at',
+  limit: 10,
+});
+```
 
 ### `getUserList({ emailAddress, phoneNumber })`
 
