--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -3,7 +3,7 @@ title: updateUser()
 description: Updates a user with a given id with attribute values provided in a params object.
 ---
 
-# `updateUser(userId: string, params?: UpdateUserParams)`
+# `updateUser(userId, params?: UpdateUserParams)`
 
 Updates a user with a given id with attribute values provided in a params object.
 
@@ -21,11 +21,11 @@ const user = await clerkClient.users.updateUser(userId, params);
 
 | Name | Type | Description |
 | --- | --- | --- |
-| firstName | string | User's first name. |
-| lastName | string User's | last name. |
-| password | string | The plaintext password to give the user. |
-| primaryEmailAddressID | string | Email address that will replays user's current primary email address. Must be unique across your instance. |
-| primaryPhoneNumberID | string | Phone number that will replace user's current primary phone number. Must be unique across your instance. |
+| `firstName` | `string` | The user's first name. |
+| `lastName` | `string` | The user's last name. |
+| `password` | `string` | The plaintext password to give the user. |
+| `primaryEmailAddressID` | `string` | Email address that will replays user's current primary email address. Must be unique across your instance. |
+| `primaryPhoneNumberID` | `string` | Phone number that will replace user's current primary phone number. Must be unique across your instance. |
 | `publicMetadata` | `Record<string, unknown>` | Metadata saved on the user, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
