update create-organization content

--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -1,13 +1,13 @@
-# `createOrganization(params: createOrganizationParams)`
+# `createOrganization()`
 
 Creates an organization.
 
 ```tsx
-const organizationID = 'my-organization-id';
+const name = 'my-organization-name';
 
 const createdBy = 'my-user-id';
 
-const organization = await clerkClient.organizations.createOrganization({organizationID, createdBy});
+const organization = await clerkClient.organizations.createOrganization({name, createdBy});
 ```
 
 ## `createParams`
@@ -20,7 +20,7 @@ const organization = await clerkClient.organizations.createOrganization({organiz
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
-# `createOrganizationInvitation(params) `
+# `createOrganizationInvitation() `
 
 Creates an invitation for new users to join an organization.
 
@@ -47,7 +47,7 @@ const organization = await clerkClient.organizations.createOrganizationInvitatio
 | `redirectUrl?`	| `string` | The URL users will land at once the organization invitation has been accepted. | 
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the invitation that is visible to both your Frontend and Backend APIs. | 
 
-# `createOrganizationMembership(params) 
+# `createOrganizationMembership()` 
 
 Creates membership to an organization for a user directly (circumventing the need for an invitation).
 
@@ -79,7 +79,7 @@ const organizationId = 'my-organization-id';
 const organization = await clerk.organizations.deleteOrganization(organizationId);
 ```
 
-# `deleteOrganizationMembership(params)`
+# `deleteOrganizationMembership()`
 
 Removes a user from the specified organization.
 
@@ -98,7 +98,7 @@ const organization = await clerkClient.organizations.deleteOrganizationMembershi
 | `organizationId` | `string` | The id of the organization the user will be removed from. |
 | `userId` | `string` | The user id to remove from the organization. |
 
-# `getOrganization(params)`
+# `getOrganization()`
 
 Retrieves a single organization by the organization id, if the id is valid, or by the organization slug.
 
@@ -116,7 +116,7 @@ const organization = await clerkClient.organizations.getOrganization({
 | --- | --- | --- |
 | `organizationId \| slug` | `string` | The id of the organization to retrieve, or the slug of the organization to retrieve. |
 
-# `getOrganizationList(params?: GetOrganizationListParams)`
+# `getOrganizationList()`
 
 Retrieves organization list:
 
@@ -145,7 +145,7 @@ const sessions = await clerkClient.organizations.getOrganizationList({
 });
 ```
 
-# `getOrganizationMembershipList(params)`
+# `getOrganizationMembershipList()`
 
 Retrieves organization membership list:
 
@@ -173,7 +173,7 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 });
 ```
 
-# `getPendingOrganizationInvitationList(params)`
+# `getPendingOrganizationInvitationList()`
 
 Retrieves a list of organization invitations that have not yet been accepted.
 
@@ -201,7 +201,7 @@ const invitations = await clerkClient.organizations.getOrganizationInvitationLis
 });
 ```
 
-# `revokeOrganizationInvitation(params)`
+# `revokeOrganizationInvitation()`
 
 Revokes an organization invitation from a user for the specified organization.
 
@@ -239,7 +239,7 @@ const organization = await clerkClient.organizations.updateOrganization(name);
 | --- | --- | --- |
 | `name` | `string` | Updated name of the organization. |
 
-# `updateOrganizationMembership(params)`
+# `updateOrganizationMembership()`
 
 Updates a user's organization membership parameters.
 
@@ -277,10 +277,10 @@ const update = clerkClient.organizations.updateOrganizationMetadata("id",{
 
 | Name | Type	| Description |
 | --- | --- | --- |
-| `publicMetadata` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
-| `privateMetadata`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
+| `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
+| `privateMetadata?`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
-# `updateOrganizationMembershipMetadata(params)`
+# `updateOrganizationMembershipMetadata()`
 
 Updates the metadata associated with a user's organization membership.
 
@@ -298,5 +298,5 @@ const update = clerkClient.organizations.updateOrganizationMembershipMetadata("i
 | --- | --- | --- |
 | `organizationId` | `string` | The id of the organization this membership belongs to. |
 | `userId` | `string` | The user id associated with the metadata being updated. |
-| `publicMetadata` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
-| `privateMetadata`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
+| `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
+| `privateMetadata?`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
