update create-organization content

--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -69,7 +69,7 @@ const organization = await clerkClient.organizations.createOrganizationMembershi
 | `userId` | `string` | The user id of the user being added to the organization. |
 | `role` | `OrganizationMembershipRole` | The role to assign the added user within the organization. |
 
-# `deleteOrganization(organizationId)`
+# `deleteOrganization()`
 
 Deletes an organization given a valid id. Throws an error otherwise.
 
@@ -261,12 +261,14 @@ const organization = await clerkClient.organizations.updateOrganizationMembershi
 | `userId` | `string` | The user id of the user being added to the organization. |
 | `role` | `OrganizationMembershipRole` | The role to assign the added user within the organization. |
 
-# `updateOrganizationMetadata(organizationId, params)`
+# `updateOrganizationMetadata()`
 
 Updates the metadata associated with the specified organization id.
 
 ```tsx
-const update = clerkClient.organizations.updateOrganizationMetadata("id",{
+const organizationId = 'my-organization-id';
+
+const update = clerkClient.organizations.updateOrganizationMetadata(organizationId,{
   publicMetadata:{
     "example": "metadata"
   }
@@ -285,7 +287,9 @@ const update = clerkClient.organizations.updateOrganizationMetadata("id",{
 Updates the metadata associated with a user's organization membership.
 
 ```tsx
-const update = clerkClient.organizations.updateOrganizationMembershipMetadata("id",{
+const organizationId = 'my-organization-id';
+
+const update = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId,{
   publicMetadata:{
     "example": "metadata"
   }
