restructure /references/backend/organization nav

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -15,15 +15,40 @@ Placeholder text: By leveraging the Clerk Backend API, you can easily access and
 
 User operations are exposed by the users sub-api `(clerkClient.users)`. The following methods are available:
 
-- getUserList()
-- getUser()
-- getCount()
-- createUser()
-- updateUser()
-- deleteUser()
+- `getUserList()`
+- `getUser()`
+- `getCount()`
+- `createUser()`
+- `updateUser()`
+- `deleteUser()`
 
 ## Organization Object
 
+### Create
+
+- `createOrganization()`
+- `createOrganizationMembership()`
+- `createOrganizationInvitation()`
+
+### Get
+
+- `getOrganization()`
+- `getOrganizationList()`
+- `getOrganizationMembershipList()`
+- `getPendingOrganizationInvitationList()`
+
+### Update
+
+- `updateOrganization()`
+- `updateOrganizationMembership()`
+- `updateOrganizationMetadata()`
+- `updateOrganizationMembershipMetadata()`
+
+### Delete
+
+- `deleteOrganization()`
+- `deleteOrganizationMembership()`
+- `revokeOrganizationInvitation()`
 
 
 
