update titles for /references/backend/user docs

--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -1,5 +1,5 @@
 ---
-title: createUser()
+title: createUser() | User Object
 description: Creates a user. Your user management settings determine how you should setup your user model.
 ---
 
