--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -1,5 +1,5 @@
 ---
-title: deleteUser()
+title: deleteUser() | User Object
 description: Deletes a user given a valid id. Throws an error otherwise.
 ---
 
