--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -1,5 +1,5 @@
 ---
-title: getUserList()
+title: getUserList() | User Object
 description: The getUserList() method retrieves a list of users.
 ---
 
