--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -1,5 +1,5 @@
 ---
-title: updateUser()
+title: updateUser() | User Object
 description: Updates a user with a given id with attribute values provided in a params object.
 ---
 
