--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -1,5 +1,5 @@
 ---
-title: getUser()
+title: getUser() | User Object
 description: Retrieves a single user by their id, if the id is valid. Throws an error otherwise.
 ---
 
