update /references/backend content

--- a/docs/references/backend/organization/update.mdx
+++ b/docs/references/backend/organization/update.mdx
@@ -7,21 +7,24 @@ description: Methods on the `Organization` object available for updating organiz
 
 Methods on the `Organization` object available for updating organizations, organization memberships, and organization membership metadata.
 
-## `updateOrganization(organizationId, params)`
+## `updateOrganization()`
 
 Updates the organization name.
 
 ```tsx
+const organizationId = 'my-organization-id';
+
 const name = 'my-organization-name';
 
-const organization = await clerkClient.organizations.updateOrganization(name);
+const organization = await clerkClient.organizations.updateOrganization(organizationId, name);
 ```
 
 ### `UpdateOrganizationParams`
 
 | Name | Type	| Description |
 | --- | --- | --- |
-| `name` | `string` | Updated name of the organization. |
+| `organizationId` | `string` | The organization Id of the organization being updated. |
+| `name` | `string` | The updated name of the organization. |
 
 ## `updateOrganizationMembership()`
 
