--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -5,13 +5,13 @@ description:
 
 # Accessing the API
 
-Placeholder text: By leveraging the Clerk Backend API, you can easily access and update data...
+The Clerk Next.js and Node.js SDK's mirror the [Backend API](https://github.com/clerkinc/javascript/tree/main/packages/backend/src/api/endpoints). Provided is a list of the available Clerk instance methods.
 
 <Callout>
   The backend API is accessible through the `clerkClient` object if you are using Next.js, or the `clerk` object if you are using Node.js.
 </Callout>
 
-## User Object
+## `User` Object
 
 User operations are exposed by the users sub-api `(clerkClient.users)`. The following methods are available:
 
@@ -22,7 +22,7 @@ User operations are exposed by the users sub-api `(clerkClient.users)`. The foll
 - `updateUser()`
 - `deleteUser()`
 
-## Organization Object
+## `Organization` Object
 
 ### Create
 
@@ -49,6 +49,4 @@ User operations are exposed by the users sub-api `(clerkClient.users)`. The foll
 - `deleteOrganization()`
 - `deleteOrganizationMembership()`
 - `revokeOrganizationInvitation()`
-
-
 
