--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -24,6 +24,8 @@ User operations are exposed by the users sub-api `(clerkClient.users)`. The foll
 
 ## `Organization` Object
 
+Organization operations are exposed by the organizations sub-api `(clerkClient.organization)`. The following methods are available:
+
 ### Create
 
 - `createOrganization()`
