use 'operations' instead of 'object'

--- a/docs/references/backend/organization/create.mdx
+++ b/docs/references/backend/organization/create.mdx
@@ -1,5 +1,5 @@
 ---
-title: Create | Organization Object
+title: Create methods | Organization operations
 description: Methods on the `Organization` object available for creating organizations, organization memberships, and organization invitations.
 ---
 
