--- a/docs/references/backend/organization/delete.mdx
+++ b/docs/references/backend/organization/delete.mdx
@@ -1,5 +1,5 @@
 ---
-title: Delete | Organization Object
+title: Delete methods | Organization operations
 description: Methods on the `Organization` object available for deleting organizations and organization memberships, and for revoking organization invitations.
 ---
 
