--- a/docs/references/backend/organization/get.mdx
+++ b/docs/references/backend/organization/get.mdx
@@ -1,5 +1,5 @@
 ---
-title: Get | Organization Object
+title: Get methods | Organization operations
 description: Methods on the `Organization` object available for retrieving a organization data.
 ---
 
