--- a/docs/references/backend/organization/update.mdx
+++ b/docs/references/backend/organization/update.mdx
@@ -1,5 +1,5 @@
 ---
-title: Update | Organization Object
+title: Update methods | Organization operations
 description: Methods on the `Organization` object available for updating organizations, organization memberships, and organization membership metadata.
 ---
 
