--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -11,7 +11,7 @@ The Clerk Next.js and Node.js SDK's mirror the [Backend API](https://github.com/
   The backend API is accessible through the `clerkClient` object if you are using Next.js, or the `clerk` object if you are using Node.js.
 </Callout>
 
-## `User` Object
+## `User` operations
 
 User operations are exposed by the users sub-api `(clerkClient.users)`. The following methods are available:
 
@@ -22,7 +22,7 @@ User operations are exposed by the users sub-api `(clerkClient.users)`. The foll
 - `updateUser()`
 - `deleteUser()`
 
-## `Organization` Object
+## `Organization` operations
 
 Organization operations are exposed by the organizations sub-api `(clerkClient.organization)`. The following methods are available:
 
