--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -11,26 +11,31 @@ The Clerk Next.js and Node.js SDK's mirror the [Backend API](https://github.com/
   The backend API is accessible through the `clerkClient` object if you are using Next.js, or the `clerk` object if you are using Node.js.
 </Callout>
 
-## `User` operations
+## User operations
 
 User operations are exposed by the users sub-api `(clerkClient.users)`. The following methods are available:
+
+### Get
 
 - `getUserList()`
 - `getUser()`
 - `getCount()`
-- `createUser()`
-- `updateUser()`
-- `deleteUser()`
-
-## `Organization` operations
-
-Organization operations are exposed by the organizations sub-api `(clerkClient.organization)`. The following methods are available:
 
 ### Create
 
-- `createOrganization()`
-- `createOrganizationMembership()`
-- `createOrganizationInvitation()`
+- `createUser()`
+
+### Update
+
+- `updateUser()`
+
+### Delete
+
+- `deleteUser()`
+
+## Organization operations
+
+Organization operations are exposed by the organizations sub-api `(clerkClient.organization)`. The following methods are available:
 
 ### Get
 
@@ -38,6 +43,12 @@ Organization operations are exposed by the organizations sub-api `(clerkClient.o
 - `getOrganizationList()`
 - `getOrganizationMembershipList()`
 - `getPendingOrganizationInvitationList()`
+
+### Create
+
+- `createOrganization()`
+- `createOrganizationMembership()`
+- `createOrganizationInvitation()`
 
 ### Update
 
