add links to overview

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -17,21 +17,21 @@ User operations are exposed by the users sub-api `(clerkClient.users)`. The foll
 
 ### Get
 
-- `getUserList()`
-- `getUser()`
-- `getCount()`
+- [`getUserList()`](/docs/references/backend/user/get-user-list)
+- [`getUser()`](/docs/references/backend/user/get-user)
+- [`getCount()`](/docs/references/backend/user/get-count)
 
 ### Create
 
-- `createUser()`
+- [`createUser()`](/docs/references/backend/user/create-user)
 
 ### Update
 
-- `updateUser()`
+- [`updateUser()`](/docs/references/backend/user/update-user)
 
 ### Delete
 
-- `deleteUser()`
+- [`deleteUser()`](/docs/references/backend/user/delete-user)
 
 ## Organization operations
 
@@ -39,27 +39,27 @@ Organization operations are exposed by the organizations sub-api `(clerkClient.o
 
 ### Get
 
-- `getOrganization()`
-- `getOrganizationList()`
-- `getOrganizationMembershipList()`
-- `getPendingOrganizationInvitationList()`
+- [`getOrganization()`](/docs/references/backend/organization/get-organization)
+- [`getOrganizationList()`](/docs/references/backend/organization/get-organization-list)
+- [`getOrganizationMembershipList()`](/docs/references/backend/organization/get-organization-membership-list)
+- [`getPendingOrganizationInvitationList()`](/docs/references/backend/organization/get-pending-organization-invitation-list)
 
 ### Create
 
-- `createOrganization()`
-- `createOrganizationMembership()`
-- `createOrganizationInvitation()`
+- [`createOrganization()`](/docs/references/backend/organization/create-organization)
+- [`createOrganizationMembership()`](/docs/references/backend/organization/create-organization-membership)
+- [`createOrganizationInvitation()`](/docs/references/backend/organization/create-organization-invitation)
 
 ### Update
 
-- `updateOrganization()`
-- `updateOrganizationMembership()`
-- `updateOrganizationMetadata()`
-- `updateOrganizationMembershipMetadata()`
+- [`updateOrganization()`](/docs/references/backend/organization/update-organization)
+- [`updateOrganizationMembership()`](/docs/references/backend/organization/update-organization-membership)
+- [`updateOrganizationMetadata()`](/docs/references/backend/organization/update-organization-metadata)
+- [`updateOrganizationMembershipMetadata()`](/docs/references/backend/organization/update-organization-membership-metadata)
 
 ### Delete
 
-- `deleteOrganization()`
-- `deleteOrganizationMembership()`
-- `revokeOrganizationInvitation()`
+- [`deleteOrganization()`](/docs/references/backend/organization/delete-organization)
+- [`deleteOrganizationMembership()`](/docs/references/backend/organization/delete-organization-membership)
+- [`revokeOrganizationInvitation()`](/docs/references/backend/organization/revoke-organization-invitation)
 
