remove params from a reference to a function as the heading would be too long

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -3,7 +3,7 @@ title: getUserList() | User Object
 description: The getUserList() method retrieves a list of users.
 ---
 
-# `getUserList(params?: UserListParams)`
+# `getUserList()`
 
 Retrieves user list:
 
