update user content

--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -3,7 +3,7 @@ title: createUser() | User Object
 description: Creates a user. Your user management settings determine how you should setup your user model.
 ---
 
-# `createUser(params?: CreateUserParams)`
+# `createUser()`
 
 Creates a user. Your user management settings determine how you should setup your user model.
 
@@ -13,14 +13,14 @@ Any email address and phone number created using this method will be automatical
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `externalId` | `string` |	The ID of the user you use in in your external systems. Must be unique across your instance. |
-| `emailAddress[]` | `string` | Email addresses to add to the user. Must be unique across your instance. The first email address will be set as the users primary email address. |
-| `phoneNumber[]` | `string` | Phone numbers that will be added to the user. Must be unique across your instance. The first phone number will be set as the users primary phone number. |
-| `username` | `string` |	The username to give to the user. Must be unique across your instance. |
-| `password` | `string` |	The plaintext password to give the user. |
-| `firstName` | `string` | User's first name. |
-| `lastName` | `string` | User's last name. |
-| `publicMetadata` | `Record<string, unknown>` | Metadata saved on the user, that is visible to both your Frontend and Backend APIs. |
-| `privateMetadata` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
-| `unsafeMetadata` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
+| `externalId?` | `string` |	The ID of the user you use in in your external systems. Must be unique across your instance. |
+| `emailAddress[]?` | `string` | Email addresses to add to the user. Must be unique across your instance. The first email address will be set as the users primary email address. |
+| `phoneNumber[]?` | `string` | Phone numbers that will be added to the user. Must be unique across your instance. The first phone number will be set as the users primary phone number. |
+| `username?` | `string` |	The username to give to the user. Must be unique across your instance. |
+| `password?` | `string` |	The plaintext password to give the user. |
+| `firstName?` | `string` | User's first name. |
+| `lastName?` | `string` | User's last name. |
+| `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that is visible to both your Frontend and Backend APIs. |
+| `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
+| `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
 
