applying changes from code review

--- a/docs/references/backend/organization/create-organization-membership.mdx
+++ b/docs/references/backend/organization/create-organization-membership.mdx
@@ -21,6 +21,6 @@ const organization = await clerkClient.organizations.createOrganizationMembershi
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The organization Id of the organization a user is being added to. |
-| `userId` | `string` | The user id of the user being added to the organization. |
+| `organizationId` | `string` | The organization ID of the organization a user is being added to. |
+| `userId` | `string` | The user ID of the user being added to the organization. |
 | `role` | `OrganizationMembershipRole` | The role to assign the added user within the organization. |
