--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -1,11 +1,11 @@
 ---
 title: deleteOrganization()
-description: Deletes an organization given a valid id. Throws an error otherwise.
+description: Deletes an organization given a valid ID. Throws an error otherwise.
 ---
 
 # `deleteOrganization()`
 
-Deletes an organization given a valid id. Throws an error otherwise.
+Deletes an organization given a valid ID. Throws an error otherwise.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -17,4 +17,4 @@ const organization = await clerk.organizations.deleteOrganization(organizationId
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The id of the organization to delete. |
+| `organizationId` | `string` | The ID of the organization to delete. |
