--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -1,11 +1,11 @@
 ---
 title: getOrganization()
-description: Retrieves a single organization by the organization id, if the id is valid, or by the organization slug.
+description: Retrieves a single organization by the organization ID, if the ID is valid, or by the organization slug.
 ---
 
 # `getOrganization()`
 
-Retrieves a single organization by the organization id, if the id is valid, or by the organization slug.
+Retrieves a single organization by the organization ID, if the ID is valid, or by the organization slug.
 
 ```tsx
 const organizationId = 'my-organization-id';
@@ -19,4 +19,4 @@ const organization = await clerkClient.organizations.getOrganization({
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId \| slug` | `string` | The id of the organization to retrieve, or the slug of the organization to retrieve. |
+| `organizationId \| slug` | `string` | The ID of the organization to retrieve, or the slug of the organization to retrieve. |
