--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -1,11 +1,11 @@
 ---
 title: updateOrganizationMetadata()
-description: Updates the metadata associated with the specified organization id.
+description: Updates the metadata associated with the specified organization ID.
 ---
 
 # `updateOrganizationMetadata()`
 
-Updates the metadata associated with the specified organization id.
+Updates the metadata associated with the specified organization ID.
 
 ```tsx
 const organizationId = 'my-organization-id';
