--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -1,19 +1,19 @@
 ---
-title: Accessing the API
+title: Clerk Backend SDK
 description: 
 ---
 
-# Accessing the API
+# Clerk Backend SDK
 
-The Clerk Next.js and Node.js SDK's mirror the [Backend API](https://github.com/clerkinc/javascript/tree/main/packages/backend/src/api/endpoints). Provided is a list of the available Clerk instance methods.
+The [Clerk Backend SDK](https://github.com/clerkinc/javascript/tree/main/packages/backend) exposes Clerk's backend API resources and low-level authentication utilities for JavaScript environments. While the backend SDK is mainly used as a building block for Clerk's higher-level SDKs, it can also be used on its own for advanced flows and custom integrations.
 
-<Callout>
-  The backend API is accessible through the `clerkClient` object if you are using Next.js, or the `clerk` object if you are using Node.js.
+<Callout type="info">
+Clerk's Next.js and Node SDKs expose an instance of the Clerk Backend SDK for use in server environments. The Backend SDK is accessible via the `clerkClient` object if you are using Next.js, and the `clerk` object if you are using Node.
 </Callout>
 
 ## User operations
 
-User operations are exposed by the users sub-api `(clerkClient.users)`. The following methods are available:
+User operations are exposed under `clerkClient.users`. The following methods are available:
 
 ### Get
 
@@ -35,7 +35,7 @@ User operations are exposed by the users sub-api `(clerkClient.users)`. The foll
 
 ## Organization operations
 
-Organization operations are exposed by the organizations sub-api `(clerkClient.organization)`. The following methods are available:
+Organization operations are exposed under `clerkClient.organization`. The following methods are available:
 
 ### Get
 
