--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -1,11 +1,11 @@
 ---
 title: deleteUser() | User Object
-description: Deletes a user given a valid id. Throws an error otherwise.
+description: Deletes a user given a valid ID. Throws an error otherwise.
 ---
 
 # `deleteUser(userId)`
 
-Deletes a user given a valid id. Throws an error otherwise.
+Deletes a user given a valid ID. Throws an error otherwise.
 
 ```tsx
 const userId = 'my-user-id';
