--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -54,7 +54,7 @@ const sessions = await clerkClient.users.getUserList({ emailAddress, phoneNumber
 
 ### `getUserList({ query })`
 
-To do a broader match through a list of fields, you can use the query parameter which partially matches the fields: userId, emailAddress, phoneNumber, username, web3Wallet, firstName and lastName.
+To do a broader match through a list of fields, you can use the query parameter which partially matches the fields: `userId`, `emailAddress`, `phoneNumber`, `username`, `web3Wallet`, `firstName` and `lastName`.
 
 ```tsx
 // Matches users with the string `test` matched in multiple user attributes.
