--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -1,11 +1,11 @@
 ---
 title: getUser() | User Object
-description: Retrieves a single user by their id, if the id is valid. Throws an error otherwise.
+description: Retrieves a single user by their ID, if the ID is valid. Throws an error otherwise.
 ---
 
 # `getUser(userId)`
 
-Retrieves a single user by their id, if the id is valid. Throws an error otherwise.
+Retrieves a single user by their ID, if the ID is valid. Throws an error otherwise.
 
 ```tsx
 const userId = 'my-user-id';
