--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -23,8 +23,8 @@ const organization = await clerkClient.organizations.createOrganizationInvitatio
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationID` | `string` | The organization Id of the organization a user is being invited to. |
-| `inviterUserId`	| `string` | The user id of the user creating the invitation. |
+| `organizationId` | `string` | The organization ID of the organization a user is being invited to. |
+| `inviterUserId` | `string` | The user ID of the user creating the invitation. |
 | `emailAddress` | `string` | The email address to send the invitation to. |
 | `role` | `OrganizationMembershipRole` | The role to assign the invited user within the organization. |
 | `redirectUrl?`	| `string` | The URL users will land at once the organization invitation has been accepted. | 
