--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -15,12 +15,12 @@ const createdBy = 'my-user-id';
 const organization = await clerkClient.organizations.createOrganization({name, createdBy});
 ```
 
-## `createParams`
+## `CreateParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `name` | `string` | Name of the organization. |
-| `slug?` | `string`	 | Slug of the organization. |
-| `createdBy`	| `string` | The user id for the user creating the organization. The user will become an administrator for the organization. |
+| `slug?` | `string` | Slug of the organization. |
+| `createdBy` | `string` | The user ID for the user creating the organization. The user will become an administrator for the organization. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
-| `privateMetadata?`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
+| `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
