--- a/docs/references/backend/organization/delete-organization-membership.mdx
+++ b/docs/references/backend/organization/delete-organization-membership.mdx
@@ -19,5 +19,5 @@ const organization = await clerkClient.organizations.deleteOrganizationMembershi
 
 | Name | Type	| Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The id of the organization the user will be removed from. |
-| `userId` | `string` | The user id to remove from the organization. |
+| `organizationId` | `string` | The ID of the organization the user will be removed from. |
+| `userId` | `string` | The user ID to remove from the organization. |
