--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -15,7 +15,7 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The id of the organization to retrieve. |
+| `organizationId` | `string` | The ID of the organization to retrieve. |
 | `limit?` | `number` | The number of results to return. |
 | `offset?` | `number` | The number of results to skip. |
 
