--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -21,6 +21,6 @@ const organization = await clerkClient.organizations.revokeOrganizationInvitatio
 
 | Name | Type	| Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The id of the organization the user was invited to. |
-| `invitationId` | `string` | Id of the invitation to be revoked. |
-| `requestingUserId` | `string` | Id of the user revoking the organization invitation. |
+| `organizationId` | `string` | The ID of the organization the user was invited to. |
+| `invitationId` | `string` | The ID of the invitation to be revoked. |
+| `requestingUserId` | `string` | The ID of the user revoking the organization invitation. |
