--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -21,7 +21,7 @@ const update = clerkClient.organizations.updateOrganizationMembershipMetadata(or
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The id of the organization this membership belongs to. |
-| `userId` | `string` | The user id associated with the metadata being updated. |
+| `organizationId` | `string` | The ID of the organization this membership belongs to. |
+| `userId` | `string` | The user ID associated with the metadata being updated. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?`	| `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
