--- a/docs/references/backend/organization/update-organization.mdx
+++ b/docs/references/backend/organization/update-organization.mdx
@@ -19,5 +19,5 @@ const organization = await clerkClient.organizations.updateOrganization(organiza
 
 | Name | Type	| Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The organization Id of the organization being updated. |
+| `organizationId` | `string` | The organization ID of the organization being updated. |
 | `name` | `string` | The updated name of the organization. |
