applying changes from code review

--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -20,3 +20,17 @@ const organization = await clerkClient.organizations.getOrganization({
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId \| slug` | `string` | The ID of the organization to retrieve, or the slug of the organization to retrieve. |
+
+## Example
+
+### `getOrganization( { slug })`
+
+Retrieve an organization by its slug.
+
+```tsx
+const organizationSlug = 'my-organization-slug';
+
+const organization = await clerkClient.organizations.getOrganization({
+  slug: organizationSlug
+});
+```
